<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mederrand</string>
    <string name="map_key">AIzaSyB1IqVRFoqBTqsakSpAeUw_09H15uzM_Fs</string>
    <string name="text_default_user_full_name">Zoey</string>
    <string name="text_default_user_email">zoey@yopmail.com</string>
    <string name="text_default_password">qweqwe</string>
    <string name="text_welcome_app">Mederrand App</string>
    <string name="text_app_description">For your health, wellness, and safety</string>
    <string name="text_invitation_to_join_app">Invitation to join Mederrand APP</string>
    <string name="text_choose_one">Choose one</string>
    <string name="text_todo">ToDO</string>
    <string name="text_opps">Opps!</string>
    <string name="text_there_is_no_internet_connection">Your internet connection doesn\'t go enough to use Mederrand App, Please check your internet connection</string>
    <string name="text_try_again">Try Again!</string>
    <string name="text_login_to_your_account">Login to your account</string>
    <string name="text_email_or_phone_number">Email | Phone Number</string>
    <string name="text_please_enter_your_email">Please enter your email</string>
    <string name="text_password">Password</string>
    <string name="text_please_enter_your_password">Please enter your Password</string>
    <string name="text_log_in">Log In</string>
    <string name="text_forgot_password_with_question_mark">Forgot Password? /</string>
    <string name="text_reset">Reset</string>
    <string name="text_if_you_are_new">If you are new /</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_almost_done">Almost Done</string>
    <string name="text_congratulations">Congratulations</string>
    <string name="text_you_are_almost_done">You\'re almost done</string>
    <string name="text_almost_done_description">By clicking the <b>\'Continue\'</b>, you are creating a\nMederrand App account, and you agree to Mederrand App</string>
    <string name="text_remember_me">Remember Me</string>
    <string name="text_required">Required!</string>
    <string name="text_success">Success!</string>
    <string name="text_failure">Failure!</string>
    <string name="text_back">Back</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_email">Email</string>
    <string name="text_next">Next</string>
    <string name="text_please_enter_email_address">Please enter your email address</string>
    <string name="text_please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_the_otp_that_has_been_sent_to_your_email_address">Please enter the OTP that has been\nsent to your email address</string>
    <string name="text_email_verification">Email Verification</string>
    <string name="text_otp_code">Otp Code</string>
    <string name="text_did_not_receive_code">Didn’t receive the code?</string>
    <string name="text_resend_code">Resend Code</string>
    <string name="text_check_spam_for_code">If you cannot find the OTP code in your email box, please check your spam</string>
    <string name="text_please_enter_otp_code">Please enter otp code.</string>
    <string name="text_please_enter_six_digit_otp_code">Please enter 6 digit otp code.</string>
    <string name="text_the_provided_otp_code_is_not_correct">The provided otp code is not correct.</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_resend_code_exclamation">Resend Code !</string>
    <string name="text_sure_to_resend_code">Are you sure you want to resend code</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_reset_password_description">Set a new password for your account.</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_verify">Verify</string>
    <string name="text_please_enter_new_password">Please enter your new password</string>
    <string name="text_password_must_contain_six_character">Password must contains at least 6 characters</string>
    <string name="text_please_enter_your_confirm_password">Please enter your confirm Password</string>
    <string name="text_password_mismatched">Password Mismatched!</string>
    <string name="text_confirm_password_does_not_matched">Password confirmation does not match</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_join_the_mederrand_app_community">JOIN THE Mederrand APP COMMUNITY</string>
    <string name="text_select_your_user_type">Select Your User Type</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_username">Username</string>
    <string name="text_i_agree_with">I agree with</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_of_use">TERMS OF USE</string>
    <string name="text_and_sign">&amp;</string>
    <string name="text_please_enter_full_name">Please enter your full name</string>
    <string name="text_please_enter_three_character_full_name">Please enter minimum 3 characters full name</string>
    <string name="text_please_enter_user_name">Please enter your user name</string>
    <string name="text_please_enter_three_character_user_name">Please enter minimum 3 characters user name</string>
    <string name="text_please_enter_complete_phone_number">Please enter your complete phone number</string>
    <string name="text_please_enter_six_digit_password">Please enter at-least 6 digit password</string>
    <string name="text_please_enter_phone_number">Please enter your phone number</string>
    <string name="text_please_enter_confirm_password">Please enter confirm password</string>
    <string name="text_please_agree_to_privacy_policy">Please Agree with our Privacy policy to continue</string>
    <string name="text_countries_list">Countries List</string>
    <string name="text_help_us_understand_you_better">Help us understand you better</string>
    <string name="text_date_of_birth">Date of birth</string>
    <string name="text_select_date_of_birth">Select Date of birth</string>
    <string name="text_select_end_date">Select End Date</string>
    <string name="text_home_address">Home Address</string>
    <string name="text_select_home_address">Select Home Address</string>
    <string name="text_do_you_have_diabetes">Do you have Diabetes?</string>
    <string name="text_do_you_have_high_cholesterol">Do you have high Cholesterol?</string>
    <string name="text_how_often_do_you_exercise">How often do you exercise?</string>
    <string name="text_select">Select</string>
    <string name="text_enable_permissions">Enable Permissions</string>
    <string name="text_allow_gallery_permissions">Please allow us to access your camera &amp; gallery so you can upload photo and videos. Click on the settings button and enable the media access through settings.</string>
    <string name="text_allow_location_permissions">Please allow us to access your location so you select the location. Click on the settings button and enable the location access through settings</string>
    <string name="text_allow_contacts_permissions">Please allow us to access your contacts so you can\n invite them. Click on the settings button and enable the\n contacts access through settings</string>
    <string name="text_go_to_settings">GO TO SETTINGS</string>
    <string name="text_next_share_with_us_your_medication_intake">Next, share with us your medication intake</string>
    <string name="text_type_of_medicine">Type Of Medicine</string>
    <string name="text_enter_name_of_medicine">Enter name of medication (e.g Aspirin)</string>
    <string name="text_dosage_in_mg">Dosage In Mg</string>
    <string name="text_enter_dosage_in_mg">Enter dosage in milli gram</string>
    <string name="text_choose_the_days_you_will_take_this_medication">Choose the days you\'ll take this medication?</string>
    <string name="text_how_frequent_do_you_have_to_take_this_medication">How frequent do you have to take this medication?</string>
    <string name="text_how_long_do_you_have_to_take_this_medication">How long do you have to take this medication?</string>
    <string name="text_choose_your_interests">CHOOSE YOUR INTERESTS</string>
    <string name="text_select_your_interest_in_the_following_activities">Select your interest in the following activities (choose up to 3)</string>
    <string name="text_lastly_share_with_us_your_emergency_contacts">Lastly, share with us your emergency contacts</string>
    <string name="text_first_relation">#1 Relation</string>
    <string name="text_first_name">#1 Name</string>
    <string name="text_first_contact_number">#1 Contact Number</string>
    <string name="text_second_relation">#2 Relation</string>
    <string name="text_second_name">#2 Name</string>
    <string name="text_second_contact_number">#2 Contact Number</string>
    <string name="text_please_enter_contact_relation">Please enter contact relation (E.g Son)</string>
    <string name="text_please_enter_contact_name">Please enter contact name</string>
    <string name="text_please_enter_contact_number">Please enter contact number</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="text_search_contacts">SEARCH CONTACTS</string>
    <string name="invite_text">INVITE</string>
    <string name="text_logout">Logout</string>
    <string name="text_logout_with_exclamation">Logout !</string>
    <string name="text_are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="text_selected_date">Selected Date</string>
    <string name="text_menu">Menu</string>
    <string name="text_home">Home</string>
    <string name="text_inbox">Inbox</string>
    <string name="text_orders">Orders</string>
    <string name="text_search_address">Search Address</string>
    <string name="text_search_location">Search Location</string>
    <string name="text_pick_location">Pick Location</string>
    <string name="text_stay_connected_with_like_minded_individuals">Stay connected with like-minded individuals!</string>
    <string name="text_writeSomeThing">Write something</string>
    <string name="text_get_location">Get location</string>
    <string name="text_title">Title</string>
    <string name="text_lets_burn_those_calories">Let’s burn those calories!</string>
    <string name="text_checkout_health_promotion_board_ig">Check out Health Promotion Board IG!</string>
    <string name="text_medical_conditions">Medical conditions:</string>
    <string name="text_add_medicine">Add Medicine</string>
    <string name="text_add_medicine_to_the_mederrand_app">ADD MEDICINE TO THE Mederrand APP</string>
    <string name="text_select_image">Select Image</string>
    <string name="text_select_image_description">You can upload a image in either PNG or JPEG\nformat, ensuring it\'s in a square aspect ratio (1:1)</string>
    <string name="text_no_image_selected">No image selected</string>
    <string name="text_medicine_name">Medicine Name</string>
    <string name="text_medicine_price">Medicine Price</string>
    <string name="text_medicine_stock">Medicine Stock</string>
    <string name="text_add">Add</string>
    <string name="text_add_appointment_schedule">Add Appointment Schedule</string>
    <string name="text_price">Price :</string>
    <string name="text_stock">Stock :</string>
    <string name="text_continue">Continue</string>
    <string name="text_zero">00</string>
    <string name="text_no_medicines_added_yet">No Medicines added Yet !</string>
    <string name="text_no_medicines_added_yet_description">No medicines added yet! Once you start adding medicines, they\'ll appear here.</string>
</resources>