<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.signup.AlmostDoneActivity"
    android:background="@drawable/app_background">

    <RelativeLayout
        android:id="@+id/layout_topBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="35dp"
        >

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            >

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/text_back"
                android:src="@drawable/back_ic" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/text_almost_done"
            android:textColor="@color/app_color_dark"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_topBar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="@dimen/_167sdp"
                android:layout_height="@dimen/_107sdp"
                android:src="@drawable/flower_ic"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:contentDescription="@string/text_todo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_congratulations"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_15ssp"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_you_are_almost_done"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/edit_text_hint_color"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sign_up"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/app_color_dark"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@string/text_almost_done_description'
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/edit_text_hint_color"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="@dimen/_4sdp"
                android:textAlignment="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_3sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_terms_of_use"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/app_color_dark"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_and_sign"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/edit_text_hint_color"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_privacy_policy"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/app_color_dark"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="end"
                android:background="@drawable/btn_secondary_other"
                android:paddingHorizontal="@dimen/_40sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:elevation="@dimen/_1sdp"
                android:translationZ="@dimen/_1sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/text_continue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loading"
        layout="@layout/layout_form_loading"
        />

</RelativeLayout>