<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    >

    <ImageView
        android:id="@+id/no_internet_ic"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/text_todo"
        android:src="@drawable/no_network_ic"
        app:tint="@color/black"
        />

    <TextView
        android:id="@+id/text_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_internet_ic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/text_opps"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/text_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_no_internet"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/text_there_is_no_internet_connection"
        android:textAlignment="center"
        android:textColor="@color/colorDoveGray"
        android:textSize="@dimen/_14ssp" />

    <RelativeLayout
        android:id="@+id/layout_refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/text_connection"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/btn_primary"
        android:paddingHorizontal="@dimen/_35sdp"
        android:elevation="@dimen/_2sdp"
        android:translationZ="@dimen/_2sdp"
        >

        <TextView
            android:id="@+id/text_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/text_try_again"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />
    </RelativeLayout>
</RelativeLayout>