<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/btn_primary"
    android:layout_marginVertical="@dimen/_5sdp"
    android:elevation="1dp"
    android:translationZ="@dimen/_1sdp"
    >


    <RelativeLayout
        android:id="@+id/layoutMedicineImage"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_whit_3sdp_app_color_dark_outline"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_1sdp"
        >
        <ProgressBar
            android:id="@+id/imageLoading"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:visibility="visible"
            android:layout_centerInParent="true"
            android:theme="@style/ProgressBarStyle"
            />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/medicineImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:riv_corner_radius="@dimen/_3sdp"
            android:scaleType="centerCrop"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_toEndOf="@id/layoutMedicineImage"
        android:layout_toStartOf="@id/nextIc"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textMedicineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/text_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/text_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/text_zero"
                android:textColor="@color/colorDoveGray"
                android:textSize="@dimen/_7ssp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="|"
                android:textColor="@color/colorDoveGray"
                android:textSize="@dimen/_7ssp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/text_stock"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                android:layout_marginHorizontal="@dimen/_5ssp"
                />

            <TextView
                android:id="@+id/textStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/text_zero"
                android:textColor="@color/colorDoveGray"
                android:textSize="@dimen/_7ssp"
                />
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/nextIc"
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/text_todo"
        android:src="@drawable/next_arrow_ic" />

</RelativeLayout>